--- a/index.html
+++ b/index.html
@@ -2,17 +2,35 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Sample</title>
-    <!-- BootstrapのCSS読み込み -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <!-- jQuery読み込み -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- BootstrapのJS読み込み -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-  </body>
+    <title>佐野　鷹</title>
+    <link rel="stylesheet" href="2about.css">
+    <meta name="description" content="自己紹介ページ">
+   </head>
+   <body>
+    <header>
+     <nav>
+      <ul>
+       <li><a href="index.html">Home</a></li>
+       <li><a href="about.html" class="selected">About</a></li>
+       <li><a href="contact.html">Contact</a></li>
+      </ul>
+     </nav>
+     <div id="logo">
+     <img src="profile.jpg" alt="">
+     <h1>佐野　鷹</h1>
+     </div>
+    </header>
+    <div class="container">
+     <section>
+      <h2>About</h2>
+      <h3>自己紹介</h3>
+      <p>佐野　鷹</p>
+      <p>和歌山県出身。ホテルで働いてます</p>
+      <p>趣味は読書です。</p>
+      <ul>
+       <li><a href="https://github.com/sanoyoh">Github</a></li>
+      </ul>
+    </section>
+    </div>
+   </body>
 </html>
